clarify supporting filees

--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -76,12 +76,12 @@
                         </div>
                     </div>
                 </section>
-                <h2 class="step-title">Supporting Code</h2>
+                <h2 class="step-title">Supporting Files</h2>
                 <section>
                     <div class="row">
                         <div class="col-md-12">
-                        <p class="step-description">This section is for your code base. Write code that the user can interact with. This code is not seen 
-                                by the user and is used only for compilation.                         
+                        <p class="step-description">This section is for your code base and other supporting files (e.g. datasets). Write code and add files that the user can interact with. This code is not seen 
+                                by the user and is used only for compilation. The supporting files' contents can be protected by disabling imports such as <code>os</code> and disabling network access.                         
                         </p><hr />
                         <label class="code-label">Select Additional Imports For Your Project (Visible to users) <br />
                             <p class="field_description">Don't see something you need? <a href="mailto: support@encompassinterviews.com">Contact Us</a></p></label><br />
@@ -97,7 +97,7 @@
                                 <br />We suggest banning the library <code>os</code> so the user cannot snoop around and look at your library.</p></label> <br />
                             <input type="text" name="banned_imports" id="banned_imports" value="os", class="form-control">    
                             <div class="form-group, step">
-                            <label class="code-label">Supporting Code/Code Base (Not visible to users)</label> <br />
+                            <label class="code-label">Supporting Files/Code Base (Not visible to users)</label> <br />
                             <div id="supporting_fields">
                             <div>
                                 <div class="centered">File <label class="switch"><input type="checkbox" name="supporting_switch_1" id="supporting_switch_1"><span class="slider round"></span></label> Code</div>
